--- a/src/main/resources/com/example/crime_management_system_gui/forget_password.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/forget_password.fxml
@@ -1,48 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-
-<AnchorPane id="forgetPassword" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.ForgotPassword">
-    <Button layoutX="120.0" layoutY="718.0" mnemonicParsing="false" onAction="#switchToLogin" opacity="0.0" prefHeight="98.0" prefWidth="350.0" text="Button">
-      <cursor>
-         <Cursor fx:constant="HAND" />
-      </cursor></Button>
-    <Button layoutX="1061.0" layoutY="725.0" mnemonicParsing="false" onAction="#handleResetPassword" opacity="0.0" prefHeight="98.0" prefWidth="367.0" text="Button">
-      <cursor>
-         <Cursor fx:constant="HAND" />
-      </cursor></Button>
+<AnchorPane id="forgetPassword" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.ForgotPassword">
+    <Button layoutX="120.0" layoutY="718.0" mnemonicParsing="false" onAction="#switchToLogin" opacity="0.0"
+            prefHeight="98.0" prefWidth="350.0" text="Button">
+        <cursor>
+            <Cursor fx:constant="HAND"/>
+        </cursor>
+    </Button>
+    <Button layoutX="1061.0" layoutY="725.0" mnemonicParsing="false" onAction="#handleResetPassword" opacity="0.0"
+            prefHeight="98.0" prefWidth="367.0" text="Button">
+        <cursor>
+            <Cursor fx:constant="HAND"/>
+        </cursor>
+    </Button>
     <Label fx:id="message" alignment="CENTER" layoutX="546.0" layoutY="638.0" prefHeight="86.0" prefWidth="446.0">
-      <font>
-         <Font size="24.0" />
-      </font></Label>
-    <TextField fx:id="id" alignment="CENTER" layoutX="632.0" layoutY="224.0" prefHeight="58.0" prefWidth="406.0" promptText="ID">
         <font>
-          <Font size="24.0" />
+            <Font size="24.0"/>
         </font>
-      <cursor>
-         <Cursor fx:constant="TEXT" />
-      </cursor>
+    </Label>
+    <TextField fx:id="id" alignment="CENTER" layoutX="632.0" layoutY="224.0" prefHeight="58.0" prefWidth="406.0"
+               promptText="ID">
+        <font>
+            <Font size="24.0"/>
+        </font>
+        <cursor>
+            <Cursor fx:constant="TEXT"/>
+        </cursor>
     </TextField>
-    <PasswordField fx:id="newPassword" alignment="CENTER" layoutX="632.0" layoutY="353.0" prefHeight="58.0" prefWidth="406.0" promptText="New Password">
+    <PasswordField fx:id="newPassword" alignment="CENTER" layoutX="632.0" layoutY="353.0" prefHeight="58.0"
+                   prefWidth="406.0" promptText="New Password">
         <font>
-          <Font size="24.0" />
+            <Font size="24.0"/>
         </font>
-      <cursor>
-         <Cursor fx:constant="TEXT" />
-      </cursor>
+        <cursor>
+            <Cursor fx:constant="TEXT"/>
+        </cursor>
     </PasswordField>
-    <PasswordField fx:id="newPasswordConfirm" alignment="CENTER" layoutX="633.0" layoutY="474.0" prefHeight="58.0" prefWidth="406.0" promptText="Confirm Password">
+    <PasswordField fx:id="newPasswordConfirm" alignment="CENTER" layoutX="633.0" layoutY="474.0" prefHeight="58.0"
+                   prefWidth="406.0" promptText="Confirm Password">
         <font>
-          <Font size="24.0" />
+            <Font size="24.0"/>
         </font>
-      <cursor>
-         <Cursor fx:constant="TEXT" />
-      </cursor>
+        <cursor>
+            <Cursor fx:constant="TEXT"/>
+        </cursor>
     </PasswordField>
 </AnchorPane>
