--- a/src/main/resources/com/example/crime_management_system_gui/login.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/login.fxml
@@ -1,48 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-
-<AnchorPane id="login" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Login">
-    <Button layoutX="97.0" layoutY="709.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0" prefHeight="62.0" prefWidth="273.0" text="Button">
+<AnchorPane id="login" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Login">
+    <Button layoutX="97.0" layoutY="709.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0"
+            prefHeight="62.0" prefWidth="273.0" text="Button">
         <cursor>
-            <Cursor fx:constant="HAND" />
+            <Cursor fx:constant="HAND"/>
         </cursor>
     </Button>
-    <TextField id="border" fx:id="id" alignment="CENTER" focusTraversable="false" layoutX="589.0" layoutY="304.0" prefHeight="62.0" prefWidth="322.0" promptText="ID">
+    <TextField id="border" fx:id="id" alignment="CENTER" focusTraversable="false" layoutX="589.0" layoutY="304.0"
+               prefHeight="62.0" prefWidth="322.0" promptText="ID">
         <cursor>
-            <Cursor fx:constant="TEXT" />
+            <Cursor fx:constant="TEXT"/>
         </cursor>
-      <font>
-         <Font size="24.0" />
-      </font>
+        <font>
+            <Font size="24.0"/>
+        </font>
     </TextField>
-    <PasswordField fx:id="password" alignment="CENTER" layoutX="590.0" layoutY="408.0" onAction="#handleLogin" prefHeight="62.0" prefWidth="322.0" promptText="Password">
+    <PasswordField fx:id="password" alignment="CENTER" layoutX="590.0" layoutY="408.0" onAction="#handleLogin"
+                   prefHeight="62.0" prefWidth="322.0" promptText="Password">
         <cursor>
-            <Cursor fx:constant="TEXT" />
+            <Cursor fx:constant="TEXT"/>
         </cursor>
-      <font>
-         <Font size="24.0" />
-      </font>
+        <font>
+            <Font size="24.0"/>
+        </font>
     </PasswordField>
-    <Button layoutX="625.0" layoutY="534.0" mnemonicParsing="false" onAction="#handleLogin" opacity="0.0" prefHeight="72.0" prefWidth="296.0" text="Button">
+    <Button layoutX="625.0" layoutY="534.0" mnemonicParsing="false" onAction="#handleLogin" opacity="0.0"
+            prefHeight="72.0" prefWidth="296.0" text="Button">
         <cursor>
-            <Cursor fx:constant="HAND" />
+            <Cursor fx:constant="HAND"/>
         </cursor>
     </Button>
-    <Button layoutX="1124.0" layoutY="704.0" mnemonicParsing="false" onAction="#switchToForgetPassword" opacity="0.0" prefHeight="84.0" prefWidth="322.0" text="Button">
+    <Button layoutX="1124.0" layoutY="704.0" mnemonicParsing="false" onAction="#switchToForgetPassword" opacity="0.0"
+            prefHeight="84.0" prefWidth="322.0" text="Button">
         <cursor>
-            <Cursor fx:constant="HAND" />
+            <Cursor fx:constant="HAND"/>
         </cursor>
     </Button>
-    <Label fx:id="message" alignment="CENTER" contentDisplay="CENTER" layoutX="77.0" layoutY="606.0" prefHeight="62.0" prefWidth="1385.0">
-      <font>
-         <Font size="18.0" />
-      </font>
+    <Label fx:id="message" alignment="CENTER" contentDisplay="CENTER" layoutX="77.0" layoutY="606.0" prefHeight="62.0"
+           prefWidth="1385.0">
+        <font>
+            <Font size="18.0"/>
+        </font>
     </Label>
 </AnchorPane>
