--- a/src/main/resources/com/example/crime_management_system_gui/main.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/main.fxml
@@ -1,23 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.layout.AnchorPane?>
-
-<AnchorPane id="main" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/17.0.6" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Switching">
-    <Button focusTraversable="false" layoutX="641.0" layoutY="745.0" mnemonicParsing="false" onAction="#switchToLogin" opacity="0.0" prefHeight="78.0" prefWidth="278.0" text="Button">
+<AnchorPane id="main" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
+            minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css"
+            xmlns="http://javafx.com/javafx/17.0.6" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.example.crime_management_system_gui.Switching">
+    <Button focusTraversable="false" layoutX="641.0" layoutY="745.0" mnemonicParsing="false" onAction="#switchToLogin"
+            opacity="0.0" prefHeight="78.0" prefWidth="278.0" text="Button">
         <cursor>
-            <Cursor fx:constant="HAND" />
+            <Cursor fx:constant="HAND"/>
         </cursor>
     </Button>
-    <Button layoutX="75.0" layoutY="740.0" mnemonicParsing="false" onAction="#switchToRegister" opacity="0.0" prefHeight="72.0" prefWidth="278.0" text="Button">
+    <Button layoutX="75.0" layoutY="740.0" mnemonicParsing="false" onAction="#switchToRegister" opacity="0.0"
+            prefHeight="72.0" prefWidth="278.0" text="Button">
         <cursor>
-            <Cursor fx:constant="HAND" />
+            <Cursor fx:constant="HAND"/>
         </cursor>
     </Button>
-    <Button layoutX="1176.0" layoutY="740.0" mnemonicParsing="false" onAction="#switchToReport" opacity="0.0" prefHeight="85.0" prefWidth="278.0" text="Button">
+    <Button layoutX="1176.0" layoutY="740.0" mnemonicParsing="false" onAction="#switchToReport" opacity="0.0"
+            prefHeight="85.0" prefWidth="278.0" text="Button">
         <cursor>
-            <Cursor fx:constant="HAND" />
+            <Cursor fx:constant="HAND"/>
         </cursor>
     </Button>
 </AnchorPane>
