--- a/src/main/resources/com/example/crime_management_system_gui/police_chief.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/police_chief.fxml
@@ -1,30 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.layout.AnchorPane?>
-
-<AnchorPane id="policeChief" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.PoliceChief">
-    <Button layoutX="334.0" layoutY="589.0" mnemonicParsing="false" onAction="#switchTOCreateDepartment" opacity="0.0" prefHeight="68.0" prefWidth="276.0" text="create department">
-      <cursor>
-         <Cursor fx:constant="HAND" />
-      </cursor></Button>
-    <Button layoutX="1404.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0" prefHeight="42.0" prefWidth="94.0" text="logout">
-      <cursor>
-         <Cursor fx:constant="HAND" />
-      </cursor></Button>
-    <Button layoutX="932.0" layoutY="352.0" mnemonicParsing="false" onAction="#switchTOViewOfficer" opacity="0.0" prefHeight="68.0" prefWidth="276.0" text="view profile">
-      <cursor>
-         <Cursor fx:constant="HAND" />
-      </cursor></Button>
-   <Button layoutX="334.0" layoutY="352.0" mnemonicParsing="false" onAction="#switchTOAssignOfficer" opacity="0.0" prefHeight="68.0" prefWidth="276.0" text="view profile">
-      <cursor>
-         <Cursor fx:constant="HAND" />
-      </cursor>
-   </Button>
-   <Button layoutX="924.0" layoutY="589.0" mnemonicParsing="false" onAction="#switchTOViewDepartment" opacity="0.0" prefHeight="68.0" prefWidth="276.0" text="view profile">
-      <cursor>
-         <Cursor fx:constant="HAND" />
-      </cursor>
-   </Button>
+<AnchorPane id="policeChief" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.PoliceChief">
+    <Button layoutX="334.0" layoutY="589.0" mnemonicParsing="false" onAction="#switchTOCreateDepartment" opacity="0.0"
+            prefHeight="68.0" prefWidth="276.0" text="create department">
+        <cursor>
+            <Cursor fx:constant="HAND"/>
+        </cursor>
+    </Button>
+    <Button layoutX="1404.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0"
+            prefHeight="42.0" prefWidth="94.0" text="logout">
+        <cursor>
+            <Cursor fx:constant="HAND"/>
+        </cursor>
+    </Button>
+    <Button layoutX="932.0" layoutY="352.0" mnemonicParsing="false" onAction="#switchTOViewOfficer" opacity="0.0"
+            prefHeight="68.0" prefWidth="276.0" text="view profile">
+        <cursor>
+            <Cursor fx:constant="HAND"/>
+        </cursor>
+    </Button>
+    <Button layoutX="334.0" layoutY="352.0" mnemonicParsing="false" onAction="#switchTOAssignOfficer" opacity="0.0"
+            prefHeight="68.0" prefWidth="276.0" text="view profile">
+        <cursor>
+            <Cursor fx:constant="HAND"/>
+        </cursor>
+    </Button>
+    <Button layoutX="924.0" layoutY="589.0" mnemonicParsing="false" onAction="#switchTOViewDepartment" opacity="0.0"
+            prefHeight="68.0" prefWidth="276.0" text="view profile">
+        <cursor>
+            <Cursor fx:constant="HAND"/>
+        </cursor>
+    </Button>
 </AnchorPane>
