--- a/src/main/resources/com/example/crime_management_system_gui/police_officer.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/police_officer.fxml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.layout.AnchorPane?>
-
-<AnchorPane id="policeOfficer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.OfficerProfile">
-    <Button layoutX="23.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0" prefHeight="48.0" prefWidth="64.0" text="Button">
-      <cursor>
-         <Cursor fx:constant="HAND" />
-      </cursor></Button>
-   <Button layoutX="1448.0" layoutY="11.0" mnemonicParsing="false" onAction="#switchTOViewProfile" opacity="0.0" prefHeight="48.0" prefWidth="54.0" text="Button">
-      <cursor>
-         <Cursor fx:constant="HAND" />
-      </cursor></Button>
+<AnchorPane id="policeOfficer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.OfficerProfile">
+    <Button layoutX="23.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0"
+            prefHeight="48.0" prefWidth="64.0" text="Button">
+        <cursor>
+            <Cursor fx:constant="HAND"/>
+        </cursor>
+    </Button>
+    <Button layoutX="1448.0" layoutY="11.0" mnemonicParsing="false" onAction="#switchTOViewProfile" opacity="0.0"
+            prefHeight="48.0" prefWidth="54.0" text="Button">
+        <cursor>
+            <Cursor fx:constant="HAND"/>
+        </cursor>
+    </Button>
 </AnchorPane>
