--- a/src/main/resources/com/example/crime_management_system_gui/register.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/register.fxml
@@ -1,85 +1,92 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-
-<AnchorPane id="register" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Register">
-    <TextField fx:id="username" alignment="CENTER" layoutX="564.0" layoutY="183.0" prefHeight="0.0" prefWidth="326.0" promptText="Name">
+<?import javafx.scene.text.*?>
+<AnchorPane id="register" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Register">
+    <TextField fx:id="username" alignment="CENTER" layoutX="564.0" layoutY="183.0" prefHeight="0.0" prefWidth="326.0"
+               promptText="Name">
         <font>
-            <Font size="24.0" />
+            <Font size="24.0"/>
         </font>
-      <cursor>
-         <Cursor fx:constant="TEXT" />
-      </cursor>
-    </TextField>
-    <TextField fx:id="id" alignment="CENTER" layoutX="564.0" layoutY="247.0" prefHeight="0.0" prefWidth="326.0" promptText="ID">
-        <font>
-            <Font size="24.0" />
-        </font>
-      <cursor>
-         <Cursor fx:constant="TEXT" />
-      </cursor>
-    </TextField>
-   <ComboBox fx:id="rank" layoutX="563.0" layoutY="310.0" prefHeight="51.0" prefWidth="326.0" promptText="Rank">
-      <cursor>
-         <Cursor fx:constant="HAND" />
-      </cursor>
-   </ComboBox>
-   <TextField fx:id="salary" alignment="CENTER" layoutX="563.0" layoutY="375.0" prefHeight="0.0" prefWidth="326.0" promptText="Salary">
-      <font>
-         <Font size="24.0" />
-      </font>
-      <cursor>
-         <Cursor fx:constant="TEXT" />
-      </cursor></TextField>
-   <TextField fx:id="phone" alignment="CENTER" layoutX="563.0" layoutY="434.0" prefHeight="0.0" prefWidth="326.0" promptText="Phone">
-      <font>
-         <Font size="24.0" />
-      </font>
-      <cursor>
-         <Cursor fx:constant="TEXT" />
-      </cursor>
-   </TextField>
-    <PasswordField fx:id="password" alignment="CENTER" layoutX="563.0" layoutY="491.0" prefHeight="0.0" prefWidth="326.0" promptText="Password">
-        <font>
-            <Font size="24.0" />
-        </font>
-      <cursor>
-         <Cursor fx:constant="TEXT" />
-      </cursor>
-    </PasswordField>
-    <PasswordField fx:id="confirmPassword" alignment="CENTER" layoutX="563.0" layoutY="555.0" prefHeight="0.0" prefWidth="326.0" promptText="Confirm Password">
-        <font>
-            <Font size="24.0" />
-        </font>
-      <cursor>
-         <Cursor fx:constant="TEXT" />
-      </cursor>
-    </PasswordField>
-   <ComboBox fx:id="assignedDepartment" layoutX="564.0" layoutY="621.0" prefHeight="46.0" prefWidth="326.0" promptText="Department">
-      <cursor>
-         <Cursor fx:constant="HAND" />
-      </cursor>
-   </ComboBox>
-    <Button layoutX="1007.0" layoutY="726.0" mnemonicParsing="false" onAction="#handleRegister" opacity="0.0" prefHeight="102.0" prefWidth="374.0" text="Button">
         <cursor>
-            <Cursor fx:constant="HAND" />
+            <Cursor fx:constant="TEXT"/>
+        </cursor>
+    </TextField>
+    <TextField fx:id="id" alignment="CENTER" layoutX="564.0" layoutY="247.0" prefHeight="0.0" prefWidth="326.0"
+               promptText="ID">
+        <font>
+            <Font size="24.0"/>
+        </font>
+        <cursor>
+            <Cursor fx:constant="TEXT"/>
+        </cursor>
+    </TextField>
+    <ComboBox fx:id="rank" layoutX="563.0" layoutY="310.0" prefHeight="51.0" prefWidth="326.0" promptText="Rank">
+        <cursor>
+            <Cursor fx:constant="HAND"/>
+        </cursor>
+    </ComboBox>
+    <TextField fx:id="salary" alignment="CENTER" layoutX="563.0" layoutY="375.0" prefHeight="0.0" prefWidth="326.0"
+               promptText="Salary">
+        <font>
+            <Font size="24.0"/>
+        </font>
+        <cursor>
+            <Cursor fx:constant="TEXT"/>
+        </cursor>
+    </TextField>
+    <TextField fx:id="phone" alignment="CENTER" layoutX="563.0" layoutY="434.0" prefHeight="0.0" prefWidth="326.0"
+               promptText="Phone">
+        <font>
+            <Font size="24.0"/>
+        </font>
+        <cursor>
+            <Cursor fx:constant="TEXT"/>
+        </cursor>
+    </TextField>
+    <PasswordField fx:id="password" alignment="CENTER" layoutX="563.0" layoutY="491.0" prefHeight="0.0"
+                   prefWidth="326.0" promptText="Password">
+        <font>
+            <Font size="24.0"/>
+        </font>
+        <cursor>
+            <Cursor fx:constant="TEXT"/>
+        </cursor>
+    </PasswordField>
+    <PasswordField fx:id="confirmPassword" alignment="CENTER" layoutX="563.0" layoutY="555.0" prefHeight="0.0"
+                   prefWidth="326.0" promptText="Confirm Password">
+        <font>
+            <Font size="24.0"/>
+        </font>
+        <cursor>
+            <Cursor fx:constant="TEXT"/>
+        </cursor>
+    </PasswordField>
+    <ComboBox fx:id="assignedDepartment" layoutX="564.0" layoutY="621.0" prefHeight="46.0" prefWidth="326.0"
+              promptText="Department">
+        <cursor>
+            <Cursor fx:constant="HAND"/>
+        </cursor>
+    </ComboBox>
+    <Button layoutX="1007.0" layoutY="726.0" mnemonicParsing="false" onAction="#handleRegister" opacity="0.0"
+            prefHeight="102.0" prefWidth="374.0" text="Button">
+        <cursor>
+            <Cursor fx:constant="HAND"/>
         </cursor>
     </Button>
-    <Button layoutX="125.0" layoutY="733.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0" prefHeight="91.0" prefWidth="319.0" text="Button">
+    <Button layoutX="125.0" layoutY="733.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0"
+            prefHeight="91.0" prefWidth="319.0" text="Button">
         <cursor>
-            <Cursor fx:constant="HAND" />
+            <Cursor fx:constant="HAND"/>
         </cursor>
     </Button>
     <Label fx:id="message" alignment="CENTER" layoutX="438.0" layoutY="687.0" prefHeight="74.0" prefWidth="578.0">
         <font>
-            <Font size="24.0" />
+            <Font size="24.0"/>
         </font>
     </Label>
 </AnchorPane>
