--- a/src/main/resources/com/example/crime_management_system_gui/view_department.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/view_department.fxml
@@ -1,42 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
 <?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-
-<AnchorPane id="viewDepartment" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Departments">
-    <Button layoutX="46.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchTOPoliceChief" opacity="0.0" prefHeight="38.0" prefWidth="54.0" text="Back">
-      <cursor>
-         <Cursor fx:constant="HAND" />
-      </cursor></Button>
-   <Button layoutX="669.0" layoutY="265.0" mnemonicParsing="false" onAction="#viewDepartment" opacity="0.0" prefHeight="74.0" prefWidth="222.0" text="view">
-      <cursor>
-         <Cursor fx:constant="HAND" />
-      </cursor></Button>
-   <Label fx:id="viewId" alignment="CENTER" layoutX="321.0" layoutY="401.0" prefHeight="63.0" prefWidth="383.0">
-      <font>
-         <Font size="24.0" />
-      </font></Label>
-   <TextField fx:id="name" alignment="CENTER" layoutX="570.0" layoutY="188.0" prefHeight="63.0" prefWidth="415.0">
-      <cursor>
-         <Cursor fx:constant="TEXT" />
-      </cursor>
-      <font>
-         <Font size="24.0" />
-      </font></TextField>
-   <Label fx:id="message" alignment="CENTER" layoutX="597.0" layoutY="324.0" prefHeight="63.0" prefWidth="415.0">
-      <font>
-         <Font size="24.0" />
-      </font></Label>
-   <ListView fx:id="officers" editable="true" layoutX="321.0" layoutY="484.0" prefHeight="234.0" prefWidth="383.0" />
-   <Label fx:id="dateOfActivation" alignment="CENTER" layoutX="1076.0" layoutY="401.0" prefHeight="63.0" prefWidth="383.0">
-      <font>
-         <Font size="24.0" />
-      </font>
-   </Label>
-   <ListView fx:id="cases" layoutX="1078.0" layoutY="484.0" prefHeight="234.0" prefWidth="383.0" />
+<AnchorPane id="viewDepartment" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Departments">
+    <Button layoutX="46.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchTOPoliceChief" opacity="0.0"
+            prefHeight="38.0" prefWidth="54.0" text="Back">
+        <cursor>
+            <Cursor fx:constant="HAND"/>
+        </cursor>
+    </Button>
+    <Button layoutX="669.0" layoutY="265.0" mnemonicParsing="false" onAction="#viewDepartment" opacity="0.0"
+            prefHeight="74.0" prefWidth="222.0" text="view">
+        <cursor>
+            <Cursor fx:constant="HAND"/>
+        </cursor>
+    </Button>
+    <Label fx:id="viewId" alignment="CENTER" layoutX="321.0" layoutY="401.0" prefHeight="63.0" prefWidth="383.0">
+        <font>
+            <Font size="24.0"/>
+        </font>
+    </Label>
+    <TextField fx:id="name" alignment="CENTER" layoutX="570.0" layoutY="188.0" prefHeight="63.0" prefWidth="415.0">
+        <cursor>
+            <Cursor fx:constant="TEXT"/>
+        </cursor>
+        <font>
+            <Font size="24.0"/>
+        </font>
+    </TextField>
+    <Label fx:id="message" alignment="CENTER" layoutX="597.0" layoutY="324.0" prefHeight="63.0" prefWidth="415.0">
+        <font>
+            <Font size="24.0"/>
+        </font>
+    </Label>
+    <ListView fx:id="officers" editable="true" layoutX="321.0" layoutY="484.0" prefHeight="234.0" prefWidth="383.0"/>
+    <Label fx:id="dateOfActivation" alignment="CENTER" layoutX="1076.0" layoutY="401.0" prefHeight="63.0"
+           prefWidth="383.0">
+        <font>
+            <Font size="24.0"/>
+        </font>
+    </Label>
+    <ListView fx:id="cases" layoutX="1078.0" layoutY="484.0" prefHeight="234.0" prefWidth="383.0"/>
 </AnchorPane>
